# Eggy

./: .gitignore  .gitmodules  CMakeLists.txt  ClearCache.bat  README.md  Setup.bat
Engine/Plugins/ShaderConverter/Source/: ShaderConverter.cpp  ShaderConverter.h  main.cpp
Engine/Shader/: BRDF.hlsli  Basic.hlsl  Basic.hlsli  Basic_PS.hlsl  Basic_PS.spirv  Basic_VS.hlsl  Basic_VS.spirv  Common.hlsli  DeferredLighting.hlsl  DeferredShadingCommon.hlsli  Helper.hlsl  PBR.hlsl  ShadingModel.hlsli
Engine/Shader/HLSL/: Basic.hlsli  Basic_PS.hlsl  Basic_VS.hlsl  Common.hlsli
Engine/Shader/HLSL/PostProcess/: PostProcessBasic.hlsli  SimpleBlur_VS.hlsl  TextureToScreen_PS.hlsl
Engine/Shader/PostProcess/: PostProcessBasic.hlsli  SimpleBlur.hlsl  SimpleBlur_PS.spirv  TextureToScreen.hlsl  TextureToScreen_PS.hlsl  TextureToScreen_VS.spirv
Engine/Source/: main.cpp
Engine/Source/Client/: Camera.cpp  Camera.h  ClientScene.cpp  ClientScene.h  HelperPrimitivesComponent.h  LightComponent.cpp  LightComponent.h  PrimitivesComponent.cpp  PrimitivesComponent.h  RenderScene.cpp  RenderScene.h  World.cpp  World.h
Engine/Source/Core/: Concepts.h  Config.cpp  Config.h  Foundation.h  KeyCodes.h
Engine/Source/Core/DataType/: Graph.h  SharedObject.h  WeakPtr.h
Engine/Source/Core/DataType/Container/: List.h  Map.h  Pool.h  String.h
Engine/Source/Core/DataType/DesignPattern/: DP_Factory.h  DP_Singleton.h
Engine/Source/Core/Engine/: Engine.cpp  Engine.h
Engine/Source/Core/Engine/Dispatcher/: ObjectDispatcher.cpp  ObjectDispatcher.h
Engine/Source/Core/Engine/Event/: Event.h  EventHelper.h
Engine/Source/Core/Engine/Resource/: Material.h  Mesh.cpp  Mesh.h  ResourceObject.cpp  ResourceObject.h  Texture.h
Engine/Source/Core/File/: Archive.h  File.cpp  File.h  TextureLoader.cpp  TextureLoader.h  XMLArchive.cpp  XMLArchive.h
Engine/Source/Core/Interface/: ILogger.h  IPlatform.h  IRenderElement.h  IRenderElements.h  IRenderMesh.h  IRenderObject.h  IRenderScene.h  ISystem.h  ITexture.h  ITickable.cpp  ITickable.h
Engine/Source/Core/Math/: FloatVector.h  MathTester.h  MathUtil.h  Matrix3x3.h  Matrix4x3.h  Matrix4x4.h  Quaternion.h  Vector2.h  Vector3.h  Vector4.h  VectorBase.h
Engine/Source/Core/Misc/: Guid.h  StringHelper.h
Engine/Source/Core/Object/: IComponent.cpp  IComponent.h  IEntity.cpp  IEntity.h  IMaterial.h  IMesh.h  IObject.cpp  IObject.h  IPrimitive.h  IWorld.cpp  IWorld.h  Material.cpp  Material.h  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Engine/Source/Core/Platform/: Win32.h
Engine/Source/Core/Reflection/: Reflection.cpp  Reflection.h  ReflectionDefine.cpp  ReflectionDefine.h  ReflectionIntrinsic.cpp  ReflectionIntrinsic.h  ReflectionMacro.h  Serialization.h
Engine/Source/Core/System/: ConfigSystem.cpp  ConfigSystem.h  FileSystem.cpp  FileSystem.h  InputSystem.cpp  InputSystem.h  LoggerSystem.cpp  LoggerSystem.h  ModuleSystem.cpp  ModuleSystem.h  RenderSystem.cpp  RenderSystem.h  SystemManager.cpp  SystemManager.h  TextureSystem.cpp  TextureSystem.h  UISystem.cpp  UISystem.h  Win32.h
Engine/Source/Drivers/Windows/: Win32Game.cpp  Win32Game.h
Engine/Source/Graphics/Elements/: RenderElement.h  RenderElements.h
Engine/Source/Graphics/Feature/: CommonRenderer.cpp  CommonRenderer.h  ImGuiRenderer.cpp  ImGuiRenderer.h  LightRenderer.cpp  LightRenderer.h
Engine/Source/Graphics/Light/: Light.h
Engine/Source/Graphics/Pipeline/: DeferredPipeline.cpp  DeferredPipeline.h  ForwardPipeline.cpp  ForwardPipeline.h
Engine/Source/Graphics/RHI/: ILight.h  IRenderDevice.h  IRenderHeader.cpp  IRenderHeader.h  IRenderPass.cpp  IRenderPass.h  IRenderPipeline.cpp  IRenderPipeline.h  IRenderResource.cpp  IRenderResource.h  IShader.cpp  IShader.h  IShaderRenderResource.cpp  IShaderRenderResource.h  IShadingBatch.cpp  IShadingBatch.h  IShadingState.h  RenderGraph.cpp  RenderGraph.h  RenderItem.h  RenderObject.cpp  RenderObject.h
Engine/Source/Graphics/Renderer/: RenderMesh.cpp  RenderMesh.h  VertexFactory.cpp  VertexFactory.h
Engine/Source/Resource/: ResourceHeader.h  ResourceItem.h  ResourceModule.cpp  ResourceModule.h  ResourceObject.cpp  ResourceObject.h
Engine/Source/Resource/Resource/: MaterialResource.cpp  MaterialResource.h  MeshResource.cpp  MeshResource.h  ModelResource.cpp  ModelResource.h  ShaderResource.cpp  ShaderResource.h  TextureResource.cpp  TextureResource.h
Engine/Source/UnitTest/: DP_UnitTest.h  SharedObject_UnitTest.h  UnitTest.cpp  UnitTest.h  UnitTestHeader.h
Package/EngineDefault/: EngineDefault.meta.xml  EngineDefault.meta_template.xml
Package/EngineDefault/Box/Material/: meta.xml
Package/EngineDefault/Box/Mesh/: meta.xml  source.FBX
Package/EngineDefault/Box/Model/: meta.xml
Package/EngineDefault/Box/Shader/: meta.xml
Package/EngineDefault/Box/Texture/: meta.xml
Package/EngineDefault/Mesh/: CameraModel.FBX  Sphere.FBX
Tools/: eggysl-0.0.1.vsix
Tools/ShaderConductor/: Test.bat
(+18 files in other folders)
